0.222 2023-10-10
  [Internal Changes]
    * Remove IO::File#configure method.
  [Bug Fix]
    * Fix a bug that IO::File#new_from_fd returns IO::Handle instead of IO::File.
0.221 2023-10-10
  [Internal Changes]
    * IO::Handle#set_blocking method always perform a system call.
    * configure method is implemented in IO::File class and it is called from new and new_from_fd method.
    * configure method is called in new method in IO::Socket::IP, IO::Socket::INET, IO::Socket::INET6.
    * Remove configure method from IO::Handle.
    * Remove FieldsInitOnly option from IO::Handle#init method.
    
  [Incompatible Changes]
    * Blocking option ins IO::Socket and its child classes is not allowed. Its blocking mode is always non-blocking mode.
    * IO::Socket is an abstract class, and remove new method.
  [Bug Fix]
    * Fix a bug that IO::Socket and its child classes are not non-blocking mode.
    * Fix a bug that acceptted client is not non-blocking mode.
    
0.220001 2023-10-09
  [Test Fix]
    * Disable server tests for IO::Socket::IP for Windows segfault for now.
0.220 2023-10-09
  [New Features]
    * Add IO#open method.
    * Add IO#opendir method.
  [Test Improvement]
    * Add tests for IO::Socket::IP server features with goroutines.
0.219 2023-06-14
  [Support Changes]
    * Does not support 32bit systems.
  [Requirement Changes]
    * Require SPVM::Sys 0.524.
    * Require Perl v5.20.3.
    * Remove Test::TCP requirement.
    * Remove IO 1.55 requirement.
    * Remove Mojolicious requirement.
    
  [New Features]
    * Add IO::Socket#accept method. This has existed, but not documented.
    * Add IO::Socket::IP#accept method.
    * Add IO::Socket::INET#accept method.
    * Add IO::Socket::INET6#accept method.
    * Add IO::Socket::UNIX#accept method.
  [Incompatible Changes]
    * The return type of IO::Socket::INET is changed from IO::Socket::IP to IO::Socket::INET.