@@ -3,6 +3,8 @@
     * Remove IO::File#configure method.
   [Bug Fix]
     * Fix a bug that IO::File#new_from_fd returns IO::Handle instead of IO::File.
+  [Incompatible Changes]
+    * Remove IO::Handle#new method.
 0.221 2023-10-10
   [Internal Changes]
     * IO::Handle#set_blocking method always perform a system call.
